Fix an issue in converting the secret to bytes
Instead of converting the secret to byte array from Base32 string, the
code used to convert the secret from ASCII string to byte array. Tests
used to pass because the secret in tests (taken from RFCs) hand-picked
to be the ASCII representation of the actual Base32 string. With this
change, the tests now use Base32 string for the secret.

--- a/src/TheBlueSky.SwiftAuthenticator.Verifier/TheBlueSky.SwiftAuthenticator.Verifier.csproj
+++ b/src/TheBlueSky.SwiftAuthenticator.Verifier/TheBlueSky.SwiftAuthenticator.Verifier.csproj
@@ -12,6 +12,7 @@
     <Description>A simple and straightforward HOTP and TOTP verification library for .NET.</Description>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <Title>TheBlueSky.SwiftAuthenticator.Verifier</Title>
+    <PackageVersion>1.0.1</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
