--- a/src/TheBlueSky.SwiftAuthenticator.Verifier/TheBlueSky.SwiftAuthenticator.Verifier.csproj
+++ b/src/TheBlueSky.SwiftAuthenticator.Verifier/TheBlueSky.SwiftAuthenticator.Verifier.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Essam Almohammadi</Authors>
     <PackageTags>HOTP TOTP Authenticator Verifier RFC-4226 RFC-6238</PackageTags>
@@ -12,8 +12,12 @@
     <Description>A simple and straightforward HOTP and TOTP verification library for .NET.</Description>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <Title>TheBlueSky.SwiftAuthenticator.Verifier</Title>
-    <PackageVersion>1.0.1</PackageVersion>
+    <PackageVersion>1.1.0</PackageVersion>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.3'">
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TheBlueSky.SwiftAuthenticator\TheBlueSky.SwiftAuthenticator.csproj" />
