--- a/src/TheBlueSky.SwiftAuthenticator/TheBlueSky.SwiftAuthenticator.csproj
+++ b/src/TheBlueSky.SwiftAuthenticator/TheBlueSky.SwiftAuthenticator.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard1.3;netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Essam Almohammadi</Authors>
     <PackageTags>HOTP TOTP Authenticator RFC-4226 RFC-6238</PackageTags>
@@ -12,7 +12,7 @@
     <Description>A simple and straightforward HOTP and TOTP library for .NET.</Description>
     <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <Title>TheBlueSky.SwiftAuthenticator</Title>
-    <PackageVersion>1.1.0</PackageVersion>
+    <PackageVersion>2.0.0</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
